# ghostty-mcp

./: AGENTS.md  README.md  build.zig  build.zig.zon  pyproject.toml
.amp/: settings.json
src/: main.zig  zmx.zig
src/ghostty_mcp/: __init__.py  bridge.py  server.py  session.py
