[project]
name = "ghostty-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anibal Angulo", email = "ajcardoza2000@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.26.0",
]

[project.scripts]
ghostty-mcp = "ghostty_mcp:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.ruff.lint]
select = ['ALL']
ignore = ['D203', 'D213']
